    * Pass alert state to Lua onShipAlertChanged event (#191, #195)
    * Avoid loss of precision when calculating radius of very tiny bodies (#189)
    * Hyperspace range is displayed correctly again (#222)
    * Occasional crash in system cache pruning (#230, #237)
    * Crash due to buffer overrun in sound player (#253)
    * Fixed HDR lighting on Radeon (#87, #263)

  * Internal changes
    * All model timing now based of game time (#175, #178)
    * City models are now loaded at startup (#71)
    * All terrains optimised (octave count reduced) (#211)
    * Optionally use ccache to speed up builds (#235)
    * New HYPERSPACE and DOCKED flight states to explicitly describe some
      conditions instead of having to infer from other data (#89, #252)

Alpha 11

  * New features
    * Visual refresh: new panel graphics, UI font (Titillium Text) and model
      font (Cousine Bold) (#105, #114, #115, #138)
    * New star images in system info view (#159)
    * Manual thruster adjustments can now be made in set-speed mode (#118)
    * 5 new ground based starports (1, 2, 3, 4 landing pad configs. 
      1 Airport config) (#120)
    * Major upgrade to coriolis station model (#158)
    * Clicking on the hyperspace icon a second time after a hyperspace is
      initiated cancels the jump (#25)
    * Screenshots are now in PNG format (#91, #140)

  * Fixes
    * Orbital stations create a small amount of population (#85, #96)
    * Terrain colour changes based on temperature now works properly (makes
      Earth look correct again)
    * Crash when using an illegal goods trader that is a police front (#88)
    * Crash when restoring bulleting board ads after loading a game (#86)
    * Crash in AI collision detection in ternary systems
    * Discovery Base (Sol) orbit too close to its parent (#116)
    * Don't create illegal goods traders in systems with no illegal goods (#109)
    * Better layout for hyperdrive ranges in ship purchase screen (#94)